2006-11-20  W. Andy Carrel  <wac@google.com>

        Reviewed by Maciej.

        http://bugs.webkit.org/show_bug.cgi?id=11501
        REGRESSION: \u no longer escapes metacharacters in RegExps
        http://bugs.webkit.org/show_bug.cgi?id=11502
        Serializing RegExps doesn't preserve Unicode escapes

        * fast/js/kde/RegExp-expected.txt:
        * fast/js/regexp-unicode-handling-expected.txt:
        Adjust these test results to passing as a result of other included
        changes in this revision.

2006-11-20  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Maciej.

        http://bugs.webkit.org/show_bug.cgi?id=10736
        XMLHttpRequest.responseXML should be null on error

        * http/tests/xmlhttprequest/zero-length-response-expected.txt:
        * http/tests/xmlhttprequest/zero-length-response-sync-expected.txt:
        Updated the results for the new behavior.

2006-11-20  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Sam Weinig.

        http://bugs.webkit.org/show_bug.cgi?id=11633
        Implement XMLDocument properties xmlEncoding, xmlVersion, xmlStandalone

        * dom/xhtml/level3/core/documentgetxmlencoding01-expected.txt:
        * dom/xhtml/level3/core/documentgetxmlencoding03-expected.txt
        * dom/xhtml/level3/core/documentgetxmlstandalone04-expected.txt:
        * dom/xhtml/level3/core/documentgetxmlversion01-expected.txt:
        * dom/xhtml/level3/core/documentgetxmlversion02-expected.txt:
        * dom/xhtml/level3/core/documentgetxmlversion03-expected.txt:
        These now pass.

        * dom/xhtml/level3/core/documentgetxmlencoding03.xhtml: Re-added a correct test.

        * fast/dom/Window/window-properties-expected.txt: Added these new properties.

        * http/tests/xmlhttprequest/xml-encoding-expected.txt: Added.
        * http/tests/xmlhttprequest/xml-encoding.html: Added.
        * http/tests/xmlhttprequest/resources/xml-encoding.xml: Added.