@@ -1,0 +1,8 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderBlock {DIV} at (0,0) size 220x220 [bgcolor=#00FF00] [border: (10px solid #00FFFF) (10px solid #FF0000) (10px solid #0000FF) (10px solid #00FFFF)]
+        RenderText {#text} at (10,10) size 4x18
+          text run at (10,10) width 4: " "
