@@ -1,0 +1,22 @@
+<html>
+<head>
+    <style type="text/css">
+        div {
+            width: 200px;
+            height: 200px;
+            border: 10px solid cyan;
+            border-bottom-color: blue;
+            border-right-color: red;
+            -webkit-border-top-right-radius: 40px;
+            -webkit-border-bottom-left-radius: 60px;
+            -webkit-border-bottom-right-radius: 30px;
+            background-color:lime;
+        }
+    </style>
+</head>
+<body>
+    <div>
+        &nbsp;
+    </div>
+</body>
+</html>
